--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <header class="row site-header d-flex">
             <nav class="col-lg-2  text-center d-none d-lg-block d-xl-block">
-                <a class="main-nav-buttons navbar-hover" href="home.html">Home</a>
+                <a class="main-nav-buttons navbar-hover" href="index.html">Home</a>
             </nav>
             <nav class="col-lg-2  text-center d-none d-lg-block d-xl-block">
                 <a class="main-nav-buttons navbar-hover" href="#!">Shop</a>
@@ -59,7 +59,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link navbar-hover" href="home.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link navbar-hover" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link navbar-hover" href="#!">Shop <span class="sr-only">(current)</span></a>
