--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p>Fueling the Start to Your Day.</p>
             </article>
             <figure class="col-lg-4 no-padding">
-                <img class="fit-image no-padding" src="coffee_right.jpeg" alt="coffee art heart">
+                <img class="fit-image no-padding" src="coffee_right.jpg" alt="coffee art heart">
 
             </figure>
         </div>
