--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="row">
             <figure class="col-lg-4 no-padding">
-                <img class="fit-image no-padding" src="coffee_left.jpeg" alt="Coffee in clear cup">
+                <img class="fit-image no-padding" src="coffee_left.jpeg" alt="cappuccino in white mug">
             </figure>
             <article class="col-lg-4 ann-square">
                 <h2 class="text-center"> Making the World Go Round</h2>
@@ -94,7 +94,7 @@
                 <p>Fueling the Start to Your Day.</p>
             </article>
             <figure class="col-lg-4 no-padding">
-                <img class="fit-image no-padding" src="coffee_right.jpg" alt="coffee art heart">
+                <img class="fit-image no-padding" src="coffee_right.jpg" alt="wooden platter with coffee cup and ground beans">
 
             </figure>
         </div>
