--- a/locations.html
+++ b/locations.html
@@ -131,7 +131,7 @@
                 
                 <section class="address">
                     <h4>Ballentine</h4>
-                    <p>109 River St.</p>
+                    <p>109 River Street</p>
                     <p>Irmo, SC</p>
                     <p>(803) 569 - 2306</p>
                 </section>
