--- a/locations.html
+++ b/locations.html
@@ -113,7 +113,7 @@
                 <section class="address">
                     <h4>Lexington</h4>
                     <p>157 River Blvd</p>
-                    <p>Lexington, SC</p>
+                    <p>Lexington, SC 29024</p>
                     <p>(803) 875 - 6542</p>
                 </section>
 
@@ -132,7 +132,7 @@
                 <section class="address">
                     <h4>Ballentine</h4>
                     <p>109 River Street</p>
-                    <p>Irmo, SC</p>
+                    <p>Irmo, SC 29036</p>
                     <p>(803) 569 - 2306</p>
                 </section>
 
