--- a/locations.html
+++ b/locations.html
@@ -92,7 +92,7 @@
                 <section class="address">
                     <h4>Main Street</h4>
                     <p>42 Main Street</p>
-                    <p>Columbia, SC</p>
+                    <p>Columbia, SC 29426</p>
                     <p>(803) 659 - 8710</p>
                 </section>
 
