--- a/index.html
+++ b/index.html
@@ -191,16 +191,16 @@
             </div>
 
             <div class="col-lg-3 col-6 icons">
-                <a href="https://www.facebook.com">
+                <a href="https://www.facebook.com" target="_blank">
                     <img class="social-media-icons" src="facebook.png" alt="facebook icon">
                 </a>
-                <a href="https://www.instagram.com">
+                <a href="https://www.instagram.com" target="_blank">
                     <img class="social-media-icons" src="instagram.png" alt="instagram icon">
                 </a>
-                <a href="https://www.twitter.com">
+                <a href="https://www.twitter.com" target="_blank">
                     <img class="social-media-icons" src="twitter.png" alt="twitter icon">
                 </a>
-                <a href="https://www.youtube.com">
+                <a href="https://www.youtube.com" target="_blank">
                     <img class="social-media-icons" src="youtube.png" alt="youtube icon">
                 </a>
             </div>
