--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- a Google font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
-        href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Open+Sans:wght@400;700&family=Work+Sans:wght@400;500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Open+Sans:wght@400;700;800&display=swap"
         rel="stylesheet">
 
 
@@ -59,13 +59,15 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link navbar-hover" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link navbar-hover" href="index.html">Home <span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link navbar-hover" href="#!">Shop <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link navbar-hover" href="locations.html">Locations <span class="sr-only">(current)</span></a>
+                        <a class="nav-link navbar-hover" href="locations.html">Locations <span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link navbar-hover last" href="#!">About <span class="sr-only">(current)</span></a>
@@ -94,7 +96,8 @@
                 <p>Fueling the Start to Your Day.</p>
             </article>
             <figure class="col-lg-4 no-padding">
-                <img class="fit-image no-padding" src="coffee_right.jpg" alt="wooden platter with coffee cup and ground beans">
+                <img class="fit-image no-padding" src="coffee_right.jpg"
+                    alt="wooden platter with coffee cup and ground beans">
 
             </figure>
         </div>
