--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- a Google font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
-        href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Open+Sans:wght@400;700;800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Open+Sans:wght@400;600;700;800&display=swap"
         rel="stylesheet">
 
 
