--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link navbar-hover" href="index.html">Home <span
+                        <a class="nav-link navbar-hover bold" href="index.html">Home <span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link navbar-hover" href="#!">Shop <span class="sr-only">(current)</span></a>
+                        <a class="nav-link navbar-hover bold" href="#!">Shop <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link navbar-hover" href="locations.html">Locations <span
+                        <a class="nav-link navbar-hover bold" href="locations.html">Locations <span
                                 class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link navbar-hover last" href="#!">About <span class="sr-only">(current)</span></a>
+                        <a class="nav-link navbar-hover bold last" href="#!">About <span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
